Create contrato controller and swagger comments.
